# optee_examples

./: .gitignore  CMakeLists.txt  CMakeToolchain.txt  LICENSE  Makefile  README.md
acipher/: Android.mk  CMakeLists.txt
acipher/host/: Makefile  main.c
acipher/ta/: Android.mk  Makefile  acipher_ta.c  sub.mk  user_ta_header_defines.h
acipher/ta/include/: acipher_ta.h
aes/: Android.mk  CMakeLists.txt
aes/host/: Makefile  main.c
aes/ta/: Makefile  aes_ta.c  sub.mk  user_ta_header_defines.h
aes/ta/include/: aes_ta.h
attestation/host/: Makefile
attestation/host/client/: Makefile  main.c
attestation/host/common/: base64.c  base64.h  cJSON.c  cJSON.h
attestation/host/set_data/: Makefile  main.c
attestation/scripts/: analyze-ta.py  att-data-factory.py  va.py
attestation/scripts/keys/: cert-b64.json
attestation/scripts/keys/all-b64/: AIK-priv  AIK-pub  EK  IV  pe-key-priv  pe-key-pub
attestation/ta/: Android.mk  Makefile  sample_attestation_ta.c  sub.mk  user_ta_header_defines.h
attestation/ta/include/: sample_attestation_ta.h
base_sha/: Android.mk  CMakeLists.txt
base_sha/host/: Makefile  main.c
base_sha/ta/: Android.mk  Makefile  base_sha_ta.c  sub.mk  user_ta_header_defines.h
base_sha/ta/include/: base_sha_ta.h
carlos_test/: Android.mk  CMakeLists.txt
carlos_test/host/: Makefile  main.c
carlos_test/ta/: carlos_test_ta.c  sub.mk  user_ta_header_defines.h
carlos_test/ta/include/: carlos_test_ta.h
docs/: TA_basics.md  TA_properties.md
ecdh/: Android.mk  CMakeLists.txt
ecdh/host/: Makefile  main.c
ecdh/ta/: Android.mk  Makefile  ecdh_ta.c  sub.mk  user_ta_header_defines.h
ecdh/ta/include/: ecdh_ta.h
ecdsa/: Android.mk  CMakeLists.txt
ecdsa/host/: Makefile  main.c
ecdsa/ta/: Android.mk  Makefile  ecdsa_ta.c  sub.mk  user_ta_header_defines.h
ecdsa/ta/include/: ecdsa_ta.h
hello_ree/: Android.mk  CMakeLists.txt
hello_ree/host/: Makefile  main.c  ree_dll.c
hello_ree/ta/: Android.mk  Makefile  hello_ree_ta.c  sub.mk  user_ta_header_defines.h
hello_ree/ta/include/: hello_ree_ta.h
hello_world/: Android.mk  CMakeLists.txt  Makefile
hello_world/host/: Makefile  main.c  ree_service.c
hello_world/ta/: Android.mk  Makefile  hello_world_ta.c  sub.mk  user_ta_header_defines.h
hello_world/ta/include/: hello_world_ta.h
hotp/: Android.mk  CMakeLists.txt  README.md
hotp/host/: Makefile  main.c
hotp/ta/: Android.mk  Makefile  hotp_ta.c  sub.mk  user_ta_header_defines.h
hotp/ta/include/: hotp_ta.h
ocall/: Android.mk  CMakeLists.txt  Makefile
ocall/host/: Makefile  main.c
ocall/ta/: Android.mk  Makefile  ocall_ta.c  sub.mk  user_ta_header_defines.h
ocall/ta/include/: ocall_ta.h
plugins/: Android.mk  CMakeLists.txt  Makefile
plugins/host/: Makefile  main.c
plugins/syslog/: CMakeLists.txt  Makefile  syslog_plugin.c
plugins/ta/: Android.mk  Makefile  plugin_ta.c  sub.mk  user_ta_header_defines.h
plugins/ta/include/: plugin_ta.h
random/: Android.mk  CMakeLists.txt  Makefile
random/host/: Makefile  main.c
random/ta/: Android.mk  Makefile  random_example_ta.c  sub.mk  user_ta_header_defines.h
random/ta/include/: random_example_ta.h  random_ta.h
secure_storage/: Android.mk  CMakeLists.txt
secure_storage/host/: Makefile  main.c
secure_storage/ta/: Android.mk  Makefile  secure_storage_ta.c  sub.mk  user_ta_header_defines.h
secure_storage/ta/include/: secure_storage_ta.h
sha/: Android.mk  CMakeLists.txt
sha/host/: Makefile  main.c
sha/ta/: Android.mk  Makefile  sha_ta.c  sub.mk  user_ta_header_defines.h
sha/ta/include/: sha_ta.h
sign_verify/: Android.mk  CMakeLists.txt
sign_verify/host/: Makefile  main.c
sign_verify/ta/: Android.mk  Makefile  sign_verify_ta.c  sub.mk  user_ta_header_defines.h
sign_verify/ta/include/: sign_verify_ta.h
talibs/: Makefile
talibs/host/: CMakeLists.txt  Makefile  main.c  optee_example_libraries
talibs/ta/: Makefile  sub.mk  ta_main.c  user_ta_header_defines.h
talibs/ta/include/: libs_ta.h
talibs/talib1/: Makefile  sub.mk  talib1.c
talibs/talib1/include/: talib1.h
talibs/talib2/: Makefile  sub.mk  talib2.c
talibs/talib2/include/: talib2.h
talibs/talib3/: Makefile  sub.mk  talib3.c
talibs/talib3/include/: talib3.h
veraison_attestation/: Android.mk  CMakeLists.txt  README.md
veraison_attestation/host/: Makefile  client.c  client.h  main.c
veraison_attestation/server/provisoning/: .gitignore  run.sh
veraison_attestation/server/provisoning/data/: comid-psa-refval.json  comid-psa-ta.json  corim-psa.json
veraison_attestation/server/relying_party/: .gitignore
veraison_attestation/server/relying_party/app/: Makefile  main.go  pkey.json
veraison_attestation/server/relying_party/container/: Dockerfile  start.sh
veraison_attestation/server/relying_party/data/: ec256.json  evidence.json
veraison_attestation/ta/: Android.mk  Makefile  sub.mk  user_ta_header_defines.h  veraison_attestation_ta.c
veraison_attestation/ta/include/: veraison_attestation_ta.h
z23cc_test/: Android.mk  CMakeLists.txt
z23cc_test/host/: Makefile  main.c
z23cc_test/ta/: Makefile  sub.mk  user_ta_header_defines.h  z23cc_test_ta.c
z23cc_test/ta/include/: z23cc_test_ta.h
zero_copy/: Android.mk  CMakeLists.txt
zero_copy/host/: Makefile  main.c
zero_copy/ta/: Android.mk  Makefile  sub.mk  user_ta_header_defines.h  zero_copy_ta.c
zero_copy/ta/include/: zero_copy_ta.h
